--- a/modules/KraftRPG/pom.xml
+++ b/modules/KraftRPG/pom.xml
@@ -31,6 +31,13 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.afterkraft.kraftrpg</groupId>
+            <artifactId>KraftRPG-v1_7_R3</artifactId>
+            <version>v1_7_R3</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.afterkraft.kraftrpg</groupId>
             <artifactId>KraftRPG-API</artifactId>
             <version>0.0.1-SNAPSHOT</version>
