--- a/modules/KraftRPG/pom.xml
+++ b/modules/KraftRPG/pom.xml
@@ -106,6 +106,28 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <excludePackageNames>com.afterkraft.kraftrpg.compat:com.afterkraft.kraftrpg.compat.*</excludePackageNames>
+                    <includeDependencySources>true</includeDependencySources>
+                    <dependencySourceExcludes>
+                        <dependencySourceExclude>com.afterkraft.kraftrpg:KraftRPG-v1_7_R3</dependencySourceExclude>
+                    </dependencySourceExcludes>
+                    <dependencySourceIncludes>
+                        <dependencySourceInclude>com.afterkraft.kraftrpg:KraftRPG-API</dependencySourceInclude>
+                    </dependencySourceIncludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>1.5</version>
                 <executions>
