--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,20 @@
         </repository>
     </repositories>
 
+
+    <distributionManagement>
+        <repository>
+            <id>afterkraft</id>
+            <name>AfterKraft Releases</name>
+            <url>http://nexus.afterkraft.com/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>afterkraft-snapshots</id>
+            <name>AfterKraft Snapshots</name>
+            <url>http://nexus.afterkraft.com/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <dependencies>
         <!-- Bukkit Dependency -->
         <dependency>
