--- a/modules/KraftRPG/pom.xml
+++ b/modules/KraftRPG/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.7.5-R0.1-SNAPSHOT</version>
+            <version>1.7.9-R0.3-SNAPSHOT</version>
             <type>jar</type>
             <scope>provided</scope>
             <optional>true</optional>
@@ -89,6 +89,13 @@
                 <directory>../../</directory>
                 <includes>
                     <include>LICENSE</include>
+                </includes>
+            </resource>
+            <resource>
+                <targetPath>defaults</targetPath>
+                <directory>../../src/main/resources/defaults</directory>
+                <includes>
+                    <include>*.yml</include>
                 </includes>
             </resource>
         </resources>
