--- a/modules/KraftRPG/pom.xml
+++ b/modules/KraftRPG/pom.xml
@@ -35,8 +35,8 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
+            <groupId>com.afterkraft</groupId>
+            <artifactId>tweakkit-api</artifactId>
             <version>1.7.9-R0.3-SNAPSHOT</version>
             <type>jar</type>
             <scope>provided</scope>
