--- a/modules/v1_7_R3/pom.xml
+++ b/modules/v1_7_R3/pom.xml
@@ -22,6 +22,14 @@
     <dependencies>
         <dependency>
             <groupId>com.afterkraft</groupId>
+            <artifactId>tweakkit-api</artifactId>
+            <version>1.7.9-R0.3-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.afterkraft</groupId>
             <artifactId>tweakkit</artifactId>
             <version>1.7.9-R0.3-SNAPSHOT</version>
             <type>jar</type>
