--- a/pom.xml
+++ b/pom.xml
@@ -78,8 +78,8 @@
     <dependencies>
         <!-- Bukkit Dependency -->
         <dependency>
-            <groupId>com.afterkraft</groupId>
-            <artifactId>tweakkit-api</artifactId>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
             <version>1.7.9-R0.3-SNAPSHOT</version>
         </dependency>
         <!-- API Dependency -->
