Update implementation for Summons and Effects refactor.

--- a/modules/KraftRPG/pom.xml
+++ b/modules/KraftRPG/pom.xml
@@ -1,24 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.afterkraft.kraftrpg</groupId>
+
+    <name>KraftRPG</name>
     <artifactId>KraftRPG</artifactId>
     <packaging>jar</packaging>
-    <name>KraftRPG</name>
-    <url>http://git.afterkraft.com/AfterKraft/KraftRPG</url>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
     <version>0.0.1-SNAPSHOT</version>
 
-    <repositories>
-        <repository>
-            <id>afterkraft</id>
-            <url>http://nexus.afterkraft.com/content/groups/public</url>
-        </repository>
-    </repositories>
+    <parent>
+        <groupId>com.afterkraft.kraftrpg</groupId>
+        <artifactId>KraftRPG-Parent</artifactId>
+        <version>parent</version>
+        <relativePath>../../</relativePath>
+    </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>com.afterkraft.kraftrpg</groupId>
+            <artifactId>KraftRPG-API</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+            <optional>false</optional>
+        </dependency>
         <dependency>
             <groupId>com.afterkraft.kraftrpg</groupId>
             <artifactId>KraftRPG-v1_7_R3</artifactId>
@@ -26,94 +29,7 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>com.afterkraft.kraftrpg</groupId>
-            <artifactId>KraftRPG-API</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <type>jar</type>
-            <scope>compile</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.7.9-R0.3-SNAPSHOT</version>
-            <type>jar</type>
-            <scope>provided</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>net.milkbowl.vault</groupId>
-            <artifactId>VaultAPI</artifactId>
-            <version>1.4</version>
-            <scope>provided</scope>
-            <optional>false</optional>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.bukkit</groupId>
-                    <artifactId>bukkit</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <!-- Test Dependencies -->
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>1.7.9-R0.3-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-junit4</artifactId>
-            <version>1.5.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-easymock</artifactId>
-            <version>1.5.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito</artifactId>
-            <version>1.5.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>easymock</artifactId>
-            <version>3.2</version>
-            <scope>test</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
-            <scope>test</scope>
-            <optional>true</optional>
-        </dependency>
     </dependencies>
-
-    <distributionManagement>
-        <repository>
-            <id>afterkraft</id>
-            <name>AfterKraft Releases</name>
-            <url>http://nexus.afterkraft.com/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>afterkraft-snapshots</id>
-            <name>AfterKraft Snapshots</name>
-            <url>http://nexus.afterkraft.com/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 
     <build>
         <finalName>KraftRPG</finalName>
@@ -173,6 +89,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
