--- a/build.gradle
+++ b/build.gradle
@@ -50,14 +50,16 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
     maven {
+        url "https://repo.spongepowered.org/maven/"
+    }
+    maven {
         url "http://nexus.afterkraft.com/content/groups/public/"
     }
 }
 
 dependencies {
     compile project('KraftRPG-API')
-    compile 'com.google.guava:guava:18.0'
-    compile 'org.spongepowered:spongeapi:4.1.0'
+    compile 'org.spongepowered:spongeapi:7.0.0'
 
 }
 
