--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         }
         maven {
             name = 'sponge'
-            url = 'http://repo.spongepowered.org/maven'
+            url = 'https://repo.spongepowered.org/maven'
         }
 
     }
@@ -51,9 +51,6 @@ repositories {
     mavenCentral()
     maven {
         url "https://repo.spongepowered.org/maven/"
-    }
-    maven {
-        url "http://nexus.afterkraft.com/content/groups/public/"
     }
 }
 
