--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ buildscript {
 // Plugins
 apply plugin: 'java'
 apply plugin: 'maven'
-apply plugin: 'checkstyle'
+//apply plugin: 'checkstyle'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'signing'
@@ -56,7 +56,7 @@ repositories {
 
 dependencies {
     compile project('KraftRPG-API')
-    compile 'org.spongepowered:spongeapi:7.0.0'
+    compile 'org.spongepowered:spongeapi:7.1.0'
 
 }
 
@@ -86,6 +86,7 @@ ext {
     ciSystem = rootProject.hasProperty("ciSystem") ? ciSystem : 'unknown'
     commit = rootProject.hasProperty("commit") ? commit : 'unknown'
 }
+//task checkstyle(dependsOn: tasks.withType(Checkstyle))
 
 archivesBaseName = 'KraftRPG'
 
@@ -112,15 +113,15 @@ configure([compileJava, compileTestJava]) {
     options.encoding = 'utf8'
 }
 
-checkstyle {
-    configProperties = [
-            "name"        : project.name,
-            "organization": project.organization,
-            "url"         : project.url,
-            "year"        : project.inceptionYear
-    ]
-    configFile = file(rootProject.file("checkstyle.xml"))
-}
+//checkstyle {
+//    configProperties = [
+//            "name"        : project.name,
+//            "organization": project.organization,
+//            "url"         : project.url,
+//            "year"        : project.inceptionYear
+//    ]
+//    configFile = file(rootProject.file("checkstyle.xml"))
+//}
 
 processResources {
     from 'KRAFTRPG-LICENSE'
